# prof-content-engine

./: .env.example  .gitignore  README.md  RNN_ANIMATIONS_PLAN.md  RNN_PROGRESS.md  RUN-PROGRESS-2026-04-29.md  docusaurus.config.ts  mail-template-for-college-outreach.txt  netlify.toml  opinion-2026-04-29-evening.md  opinion-2026-04-29.md  opinion-autonomy-2026-04-29.md  opinion.md  package-lock.json  package.json  sidebars.ts  tailwind.config.js  vercel.json
docs/: playgrounds-preview.mdx
docs/ai-for-leaders/: algorithms-high-level-overview.mdx  classical-ml-in-market.mdx  classification-regression-supervised-unsupervised.mdx  curriculum-overview.mdx  curriculum-tree.mdx  curriculum-visual-tree.md  intro.mdx  machine-learning-fundamentals.mdx
docs/ai-industry-trends/: intro.mdx  my-notes-agentic-ides-and-the-field.mdx  varun-moan-from-mit-to-antigravity.mdx
docs/ai-writing-and-talks/: from-statistical-models-to-modern-ai-systems-substack.md  from-statistical-models-to-modern-ai-systems.mdx  intro.mdx  (+1 more)
docs/deep-learning/: CNNS.mdx  (+3 more)
scripts/: convert_to_lesson_video.py  fetch_vimeo_embeds.py  generate-interview-research.mjs  inject_vimeo_embeds.py  populate-tutor-frontmatter.mjs  vimeo_embed_blocks.md  vimeo_embed_map.json  vimeo_set_embed_anywhere.py  wire_lesson_hero.py
static/: mnist-worker.js  pyodide-worker.js  robots.txt  transformers-worker.js
static/code/nanogpt-from-scratch/: README.md  attention.py  blocks.py  config.py  embeddings.py  generate.py  model.py  pyproject.toml  tokenizer.py  train.py
static/code/nanogpt-from-scratch/data/: README.md
(+408 files in other folders)
